load("@aspect_bazel_lib//lib:tar.bzl", "tar")
load("//distroless:defs.bzl", "flatten", "home", "passwd")
load("//distroless/tests:asserts.bzl", "assert_tar_listing")

passwd(
    name = "passwd",
    entries = [
        {
            "gecos": ["root"],
            "gid": 0,
            "home": "root",
            "shell": "usr/bin/bash",
            "uid": 0,
            "username": "root",
        },
    ],
)

home(
    name = "home",
    dirs = [
        {
            "home": "root",
            "uid": 0,
            "gid": 0,
        },
        {
            "home": "home/nonroot",
            "uid": 666,
            "gid": 666,
        },
    ],
)

tar(
    name = "source",
    srcs = glob(["dir/**/*"]),
    compress = "xz",
)

flatten(
    name = "flatten",
    tars = [
        ":passwd",
        ":home",
        ":source",
    ],
)

assert_tar_listing(
    name = "test_flatten",
    actual = "flatten",
    expected = """\
#mtree
./etc time=0.0 mode=755 gid=0 uid=0 type=dir
./etc/passwd time=0.0 mode=644 gid=0 uid=0 type=file size=34
./examples time=1672560000.0 mode=755 gid=0 uid=0 type=dir
./examples/flatten time=1672560000.0 mode=755 gid=0 uid=0 type=dir
./examples/flatten/dir time=1672560000.0 mode=755 gid=0 uid=0 type=dir
./examples/flatten/dir/changelog time=1672560000.0 mode=755 gid=0 uid=0 type=file size=0
./examples/flatten/dir/sub time=1672560000.0 mode=755 gid=0 uid=0 type=dir
./examples/flatten/dir/sub/content.txt time=1672560000.0 mode=755 gid=0 uid=0 type=file size=0
./home/nonroot time=0.0 mode=700 gid=666 uid=666 type=dir
./root time=0.0 mode=700 gid=0 uid=0 type=dir
""",
)

# Flatten with deduplication
tar(
    name = "source1",
    srcs = glob(["dir/*"]),
    compress = "xz",
)

tar(
    name = "source2",
    srcs = glob(["dir/**/*"]),
    compress = "xz",
)

tar(
    name = "source3",
    srcs = glob(["dir/**/*"]),
    compress = "xz",
)

flatten(
    name = "flatten_dedup",
    deduplicate = True,
    tars = [
        ":source2",
        ":source1",
        ":source3",
    ],
)

assert_tar_listing(
    name = "test_flatten_dedup",
    actual = "flatten_dedup",
    expected = """\
#mtree
./examples time=1672560000.0 mode=755 gid=0 uid=0 type=dir
./examples/flatten time=1672560000.0 mode=755 gid=0 uid=0 type=dir
./examples/flatten/dir time=1672560000.0 mode=755 gid=0 uid=0 type=dir
./examples/flatten/dir/changelog time=1672560000.0 mode=755 gid=0 uid=0 type=file size=0
./examples/flatten/dir/sub time=1672560000.0 mode=755 gid=0 uid=0 type=dir
./examples/flatten/dir/sub/content.txt time=1672560000.0 mode=755 gid=0 uid=0 type=file size=0
""",
)
