load("//distroless:defs.bzl", "java_keystore")
load("//distroless/tests:asserts.bzl", "assert_jks_listing", "assert_tar_listing")

java_keystore(
    name = "java_keystore",
    certificates = [
        # asserting that we support both bundle x509 certs
        # and single x509 certs
        "amazon.crt",
        "bundle.crt",
    ],
)

filegroup(
    name = "java_keystore_jks",
    srcs = [":java_keystore"],
    output_group = "jks",
)

assert_jks_listing(
    name = "test_java_keystore_jks",
    actual = "java_keystore_jks",
    expected = "expected.jks.output",
)

assert_tar_listing(
    name = "test_java_keystore",
    actual = "java_keystore",
    expected = """\
#mtree
./etc time=946684800.0 mode=755 gid=0 uid=0 type=dir
./etc/ssl time=0.0 mode=755 gid=0 uid=0 type=dir
./etc/ssl/certs time=0.0 mode=755 gid=0 uid=0 type=dir
./etc/ssl/certs/java time=0.0 mode=755 gid=0 uid=0 type=dir
./etc/ssl/certs/java/cacerts time=0.0 mode=555 gid=0 uid=0 type=file size=5349 sha1digest=d9babb136f393b02054d04194c5a33d1ff82524e
""",
)
