load("@aspect_bazel_lib//lib:diff_test.bzl", "diff_test")
load("//distroless:defs.bzl", "os_release")
load("//distroless/tests:asserts.bzl", "assert_tar_listing")

os_release(
    name = "os_release",
    content = {
        "PRETTY_NAME": "Distroless",
        "VERSION": "Debian GNU/Linux",
    },
)

diff_test(
    name = "test_os_release_content",
    file1 = "os_release_content",
    file2 = "content.expected.txt",
)

assert_tar_listing(
    name = "test_os_release",
    actual = "os_release",
    expected = """\
#mtree
./usr/lib/os-release nlink=0 time=0.0 mode=755 gid=0 uid=0 type=file size=48 cksum=107085711 sha1digest=956eb93b9476f9fc8f93cb450adc4f716d158500
""",
)

os_release(
    name = "os_release_alternative_path",
    content = {
        "PRETTY_NAME": "Distroless",
        "VERSION": "Debian GNU/Linux",
        "ARCHITECTURE": "arm64",
    },
    path = "/etc/os-release",
)

assert_tar_listing(
    name = "test_os_release_alternative_path",
    actual = "os_release_alternative_path",
    expected = """\
#mtree
./etc/os-release nlink=0 time=0.0 mode=755 gid=0 uid=0 type=file size=67 cksum=1175356314 sha1digest=ebdde6fdd9cf9876b4b592772d85817b4b482327
""",
)
