load("@aspect_bazel_lib//lib:diff_test.bzl", "diff_test")
load("//distroless:defs.bzl", "passwd")
load("//distroless/tests:asserts.bzl", "assert_tar_listing")

passwd(
    name = "passwd",
    passwds = [
        dict(
            gecos = ["root"],
            gid = 0,
            home = "/root",
            shell = "/usr/bin/bash",
            uid = 0,
            username = "root",
        ),
    ],
)

diff_test(
    name = "test_passwd_content",
    file1 = "passwd_content",
    file2 = "passwd.expected.txt",
)

assert_tar_listing(
    name = "test_passwd",
    actual = "passwd",
    expected = """\
#mtree
./etc/passwd nlink=0 time=0.0 mode=644 gid=0 uid=0 type=file size=36 cksum=216816702 sha1digest=a158dcecfd75d6502cdb1086eb5b0756d08fc423
""",
)
