# buildifier: disable=bzl-visibility
load("//apt:defs.bzl", "dpkg_statusd")
load("//distroless/tests:asserts.bzl", "assert_tar_listing")

dpkg_statusd(
    name = "statusd",
    package_name = "ca-certificates",
    control = "@example-bullseye-ca-certificates//:control.tar.xz",
)

assert_tar_listing(
    name = "test_statusd",
    actual = "statusd",
    expected = """\
#mtree
./var/lib/dpkg/status.d/ca-certificates time=1611051064.0 mode=644 gid=0 uid=0 type=file size=793
./var/lib/dpkg/status.d/ca-certificates.md5sums time=1611051064.0 mode=644 gid=0 uid=0 type=file size=14644
""",
)
